# wasm_p2p

./: Cargo.toml  README.md  index.html
client/: Cargo.toml
client/src/: main.rs  messages.rs  p2p.rs  utils.js
server/: Cargo.toml
server/src/: main.rs  messages.rs  signaling_server.rs
src/: console_log.rs  ice_server.rs  lib.rs  main.rs  messages.rs  p2p.rs  p2p_connection.rs  peer_connection.rs  signaling.rs  signaling_server.rs  utils.rs
