[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Window", "Document", "HtmlElement", "Text", "WebSocket", "MessageEvent", "RtcPeerConnection", "RtcIceGatheringState", "RtcDataChannel", "RtcSessionDescriptionInit", "RtcSdpType", "RtcSessionDescription", "RtcDataChannelState", "RtcPeerConnectionState", "RtcDataChannelEvent"] }
