[package]
name = "wasm_p2p"
version = "0.1.1"
edition = "2021"
description = "Simple peer-to-peer library for Rust + WASM, built on top of WebRTC"
license = "MIT"
repository = "https://github.com/luis-herasme/wasm_p2p/"

[lib]
name = "wasm_p2p"
path = "src/lib.rs"

[dependencies]
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.203", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.120"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Text",
    "WebSocket",
    "MessageEvent",
    "RtcPeerConnection",
    "RtcIceGatheringState",
    "RtcDataChannel",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "RtcSessionDescription",
    "RtcDataChannelState",
    "RtcPeerConnectionState",
    "RtcDataChannelEvent",
    "RtcConfiguration",
] }
