[package]
name = "signaling-server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-channel = "0.3.30"
futures-util = "0.3.30"
serde = { version="1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version="1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
uuid = { version = "1.9.1", features = ["v4"] }
